# ros-repo-3

./: .env.example  .gitignore  README.md  aruco_detector.py  build.sh  camera_stream_udp  dev.sh  dev_build.sh  maze_map.yaml  my_map.pgm  my_map.yaml  requirements.txt  ros_test.ipynb  roscars.sh  roscars.sql  run.sh  test.py  tree.txt
install/shared_interfaces/share/shared_interfaces/: local_setup.sh  package.ps1  package.sh  package.xml
mobile_controller/: CMakeLists.txt  package.xml
mobile_controller/ros_nodes/: robot_status_publisher.cpp
roscars/aruco_localizer/: CMakeLists.txt  camera_calibration.npz  package.xml  setup.py
roscars/aruco_localizer/aruco_localizer/: aruco_localizer_node.py
roscars/aruco_localizer/launch/: aruco_localizer.launch.py
roscars/aruco_mapper/: .~lock.aruco_marker_positions.csv#  aruco_marker_positions.csv  aruco_marker_positions.json  goal_position.json  package.xml  setup.cfg  setup.py
roscars/aruco_mapper/aruco_mapper/: aruco_localizer_node.py  camera_publisher.py  initialpose_custom.py  marker_recorder.py  transforms3d-0.4.2-py3-none-any.whl
roscars/aruco_mapper/launch/: aruco_mapping.launch.py  mapper.launch.py
roscars/cart_controller/: CMakeLists.txt  cart-esp.sh  package.xml  platformio.ini
roscars/cart_controller/src/: main.cpp
roscars/mobile_controller/: CMakeLists.txt  package.xml  roscar_ultra_publisher.cpp
roscars/mobile_controller/action/: maintenance_charge_action_server.cpp  move_to_goal_action_server.cpp  scan_inventory_action_server.cpp  security_patrol_action_server.cpp  start_delivery_server.cpp
roscars/mobile_controller/config/: roscar_sensors_params.yaml
roscars/mobile_controller/default_servo/: default_servo.ino  servo_test.ino
roscars/mobile_controller/drive/: control_bridge.cpp  teb_local_planner.cpp
roscars/mobile_controller/include/mobile_controller/: astar.hpp  battery.hpp  imu_sensor.hpp  kalman_filter.hpp  ultra_sensor.hpp  utils.hpp
roscars/mobile_controller/launch/: bridge_config.yaml  bridge_launch.xml  launch.xml  roscars_publishers.launch.py  sensor_data.launch.xml  start_delivery_server.launch.py  waypoint_follower_launch.xml
roscars/mobile_controller/nav_drive/: astar.cpp  waypoint_follower.cpp
roscars/mobile_controller/pinky_navigation/map/: roscars_map.pgm  roscars_map.yaml
roscars/mobile_controller/ros_nodes/: battery_node.cpp  dashboard_status_update_subscriber.cpp  imu_node.cpp  lidar.cpp  mobile_controller.cpp  robot_battery_publisher.cpp  robot_imu_publisher.cpp  robot_lidar_publisher.cpp  robot_register_publisher.cpp  robot_status_publisher.cpp  robot_ultra_publisher.cpp  roscar_avoidance_cmd_subscriber.cpp  roscar_battery_publisher.cpp  roscar_imu_publisher.cpp  roscar_lidar_publisher.cpp  roscar_navigation_goal_subscriber.cpp  roscar_obstacle_detected_publisher.cpp  roscar_obstacle_response_subscriber.cpp  roscar_pose_update_publisher.cpp  roscar_precision_stop_cmd_subscriber.cpp  roscar_precision_stop_result_publisher.cpp  roscar_presure_reader.cpp  roscar_register_publisher.cpp  roscar_ssid_publisher.cpp  roscar_status_charge_subscriber.cpp  roscar_task_complete_publisher.cpp  roscar_task_progress_publisher.cpp  roscar_ultra_publisher.cpp  sensor_data_publisher.cpp  sllidar_node.cpp
roscars/mobile_controller/roscars_config/domain_bridge/: pinky_0830_25_to_14.yaml
roscars/mobile_controller/sensor_read/: battery.cpp  imu_sensor.cpp  kalman_filter.cpp  ultra_sensor.cpp
roscars/pinky_navigation/: CMakeLists.txt  aruco_detector.py  aruco_logger.py  camera.py  package.xml
roscars/pinky_navigation/config/: aruco_logger_params.yaml
roscars/pinky_navigation/launch/: aruco_capture_launch.xml  aruco_logger_launch.xml  bringup_launch.xml
roscars/pinky_navigation/map/: roscars_map _2.yaml  roscars_map.pgm  roscars_map.yaml  roscars_map_2.pgm  roscars_map_2.yaml
roscars/pinky_navigation/params/: nav2_params.yaml
roscars/pinky_navigation/pinky_navigation/: initialpose.py
roscars/pinky_navigation/rviz/: nav2_view.rviz
roscars/pinky_violet/pinky_navigation/: CMakeLists.txt  package.xml
roscars/pinky_violet/pinky_navigation/map/: roscars_map.yaml
roscars/video_sender/: aruco_marker_positions.csv  camera  camera_stream_udp.py  camera_streame_udp.cpp  package.xml  setup.cfg  setup.py  video_sender_test.py.py
roscars/video_sender/launch/: vision_udp.launch.py  vision_udp.launch.xml
roscars/video_sender/video_sender/: aruco_align.py  aruco_localizer_node.py  camera.py  marker_recorder.py  udp_streamer_node.py  video_streamer.py
server/main_server/main_service/: main.py  main_service.py  package.xml  ros_executor.py  service.py  setup.py
server/main_server/main_service/comm/: controller.py  ctl_service.py  message_router.py  roscar_commands.py  (+3 more)
shared_interfaces/: CMakeLists.txt  package.xml
shared_interfaces/action/: ChargeProcess.action  MaintenanceCharge.action  MoveToGoal.action  PatrolZone.action  ScanInventory.action  SecurityPatrol.action  StartDelivery.action
shared_interfaces/msg/: AIModuleStatus.msg  AccessResult.msg  BatteryStatus.msg  ChargeCommand.msg  DashboardStatus.msg  EmergencyAlert.msg  EmergencyCommand.msg  ImuStatus.msg  InventoryResult.msg  LidarScan.msg  LogEvent.msg  LogEventAdmin.msg  NavigationGoal.msg  ObstacleAvoidanceCmd.msg  ObstacleDetected.msg  ObstacleResponse.msg  PrecisionStopCmd.msg  PrecisionStopResult.msg  QRCodeScan.msg  RobotPoseUpdate.msg  RobotStatus.msg  RobotStatusLog.msg  RoscarInfo.msg  RoscarPoseUpdate.msg  RoscarRegister.msg  RoscarStatus.msg  RoscarStatusLog.msg  SensorData.msg  SensorFusion.msg  StartTask.msg  TaskComplete.msg  TaskProgress.msg  UltraStatus.msg
shared_interfaces/src/: box_is_on_main.cpp  esp_udp_transport.c
shared_interfaces/srv/: GetStatus.srv  LogQuery.srv  Login.srv  ManualOverride.srv  QueryRoscarStatus.srv  QueryTaskStatus.srv  RequestDiagnostics.srv  StartInventoryCheck.srv
src/pinky_navigation/: CMakeLists.txt  package.xml
src/pinky_navigation/map/: roscars_map.pgm  roscars_map.yaml
src/shared_interfaces/: CMakeLists.txt
src/shared_interfaces/msg/: BatteryStatus.msg
(+405 files in other folders)
