<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shared_interfaces</name>
  <version>0.1.0</version>  <!-- 버전 정보 추가 -->
  <description>Shared interfaces for ROS2 communication</description> <!-- 설명 추가 -->
  <maintainer email="hinoonyaso@gmail.com">sang</maintainer>
  <license>MIT</license> <!-- 라이센스 정보 추가 -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Add rosidl_default_generators dependency -->
  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Add member_of_group tag for ROS2 interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
