<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shared_interfaces</name>
  <version>0.1.0</version>
  <description>Shared interfaces for ROS 2 communication (actions, messages, services)</description>

  <maintainer email="hinoonyaso@gmail.com">sang</maintainer>
  <license>MIT</license>

  <!-- 빌드툴 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 인터페이스 생성 및 액션 생성에 필요한 의존 -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- 런타임 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- 린트 테스트 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 인터페이스 패키지 그룹 선언 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
