<?xml version="1.0"?>
<package format="3">
  <name>aruco_localizer</name>
  <version>0.0.1</version>
  <description>ArUco 마커 기반 로봇 위치 추정</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>opencv</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>transforms3d</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
