<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_mapper</name>
  <version>0.1.0</version>
  <description>ArUco 마커의 map 기준 절대 좌표를 기록하는 ROS2 패키지입니다.</description>

  <maintainer email="tlacogns@gmail.com">pinky</maintainer>
  <license>MIT</license>

  <!-- ROS2 기반 의존 패키지 -->
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- 테스트용 의존 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
