<?xml version="1.0"?>
<package format="3">
  <name>mobile_controller</name>
  <version>0.0.1</version>
  <description>Roscar controller nodes for Pinky</description>

  <maintainer email="tlacogns@gmail.com">Huni0128</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>shared_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
