<?xml version="1.0"?>
<package format="3">
  <name>video_sender</name>
  <version>0.0.1</version>
  <description>UDP 영상 전송 및 ArUco 마커 인식 노드</description>
  <maintainer email="tlacogns@gmail.com">채훈 심</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
