<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pinky_navigation</name>
  <version>0.0.0</version>
  <description>Navigation module including initial pose handler and Nav2 integration</description>
  <maintainer email="kyung133851@pinkab.art">mkh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>cartographer_ros_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>cartographer_ros</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
