<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>main_service</name>
  <version>0.0.1</version>
  <description>Main service ROS2 interface package</description>
  <maintainer email="yonmilk@icloud.com">milka</maintainer>
  <license>MIT</license>

  <!-- 빌드툴 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 런타임 의존성 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclpy_action</exec_depend>
  <exec_depend>shared_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- 테스트 의존성 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <!-- 이 줄이 있어야 ament_python 빌드 타입으로 인식됩니다 -->
    <build_type>ament_python</build_type>
  </export>
</package>
