<?xml version="1.0"?>
<package format="3">
  <name>shared_interfaces</name>
  <version>0.0.0</version>
  <description>Shared messages and services</description>
  <maintainer email="hinoonyaso@gmail.com">sang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
